# webhook-repo

./: .env.example  Makefile  README.md  pyproject.toml  requirements.txt  run_app.py
src/: __init__.py  app.py  config.py  extensions.py
src/models/: __init__.py  event.py  repository.py
src/routes/: __init__.py  api.py  views.py  webhook.py
src/services/: __init__.py  event_processor.py  github_parser.py  validation.py
src/static/css/: app.css  components.css  main.css  responsive.css
src/static/js/: app.js  poller.js  renderer.js  utils.js
src/utils/: __init__.py  constants.py  formatters.py  helpers.py  security.py
static/css/: main.css
static/js/: app.js  poller.js  renderer.js  utils.js
templates/: base.html  index.html
templates/components/: empty_state.html  event_card.html  header.html
templates/partials/: footer.html  head.html  header.html  scripts.html
tests/: conftest.py  test_webhook.py
