[project]
name = "github-webhook-monitor"
version = "1.0.0"
description = "Real-time GitHub activity monitoring with Flask & MongoDB"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Flask==2.3.3",
    "Flask-PyMongo==2.3.0",
    "python-dotenv==1.0.0",
    "pymongo==4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "black==23.9.1",
    "flake8==6.1.0",
    "pre-commit==3.4.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
