[project]
name = "github-webhook-monitor"
version = "1.0.0"
description = "Real-time GitHub activity monitoring with Flask & MongoDB"
authors = [{name = "Developer", email = "dev@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Flask>=2.3.0",
    "Flask-PyMongo>=2.3.0",
    "python-dotenv>=1.0.0",
    "pymongo>=4.5.0",
    "gunicorn>=20.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
    "mongomock>=4.1.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
